// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalServiceForm create GitHub 1`] = `
<DocumentFragment>
  <form
    class="external-service-form"
  >
    <label
      class="label w-100"
    >
      <p
        class="mb-2"
      >
        Display name
      </p>
      <div
        class="container loader-input loaderInput mb-0"
      >
        <input
          autocomplete="off"
          autocorrect="off"
          class="form-control with-invalid-icon"
          id="test-external-service-form-display-name"
          required=""
          spellcheck="false"
          type="text"
          value="GitHub"
        />
      </div>
    </label>
    <div
      class="form-group mt-3"
    >
      DynamicallyImportedMonacoSettingsEditor
    </div>
    <button
      aria-disabled="false"
      class="btn btnPrimary test-add-external-service-button"
      type="submit"
    >
      Add connection
    </button>
  </form>
</DocumentFragment>
`;

exports[`ExternalServiceForm edit GitHub 1`] = `
<DocumentFragment>
  <form
    class="external-service-form"
  >
    <label
      class="label w-100"
    >
      <p
        class="mb-2"
      >
        Display name
      </p>
      <div
        class="container loader-input loaderInput mb-0"
      >
        <input
          autocomplete="off"
          autocorrect="off"
          class="form-control with-invalid-icon"
          id="test-external-service-form-display-name"
          required=""
          spellcheck="false"
          type="text"
          value="GitHub"
        />
      </div>
    </label>
    <div
      class="form-group mt-3"
    >
      DynamicallyImportedMonacoSettingsEditor
    </div>
    <button
      aria-disabled="false"
      class="btn btnPrimary test-add-external-service-button"
      type="submit"
    >
      Add connection
    </button>
  </form>
</DocumentFragment>
`;

exports[`ExternalServiceForm edit GitHub, loading 1`] = `
<DocumentFragment>
  <form
    class="external-service-form"
  >
    <label
      class="label w-100"
    >
      <p
        class="mb-2"
      >
        Display name
      </p>
      <div
        class="container loader-input loaderInput mb-0"
      >
        <input
          autocomplete="off"
          autocorrect="off"
          class="form-control with-invalid-icon"
          disabled=""
          id="test-external-service-form-display-name"
          required=""
          spellcheck="false"
          type="text"
          value="GitHub"
        />
      </div>
    </label>
    <div
      class="form-group mt-3"
    >
      DynamicallyImportedMonacoSettingsEditor
    </div>
    <button
      aria-disabled="true"
      class="btn btnPrimary test-add-external-service-button"
      type="submit"
    >
      <div
        aria-label="Loading"
        aria-live="polite"
        class="mdi-icon iconInline loadingSpinner"
        data-loading-spinner="true"
        role="img"
      />
      Add connection
    </button>
  </form>
</DocumentFragment>
`;
